avoid jump in mobile when changing color mode

--- a/assets/sass/design-system/header.sass
+++ b/assets/sass/design-system/header.sass
@@ -108,6 +108,8 @@ header#document-header
                     margin-top: -$spacing-1
         .additional-menu
             margin-top: $spacing-1
+            span:not(:first-of-type)
+                width: columns(6)
         html:not(.has-menu-opened) &
             .menu-socials
                 display: none
